@@ -76,7 +76,6 @@ static int sdc_iters;
 static amrex::Real dtnuc_e;
 static amrex::Real dtnuc_X;
 static amrex::Real dtnuc_X_threshold;
-static int dtnuc_mode;
 static amrex::Real dxnuc;
 static amrex::Real dxnuc_max;
 static int do_react;
