@@ -76,7 +76,6 @@ pp.query("sdc_iters", sdc_iters);
 pp.query("dtnuc_e", dtnuc_e);
 pp.query("dtnuc_X", dtnuc_X);
 pp.query("dtnuc_X_threshold", dtnuc_X_threshold);
-pp.query("dtnuc_mode", dtnuc_mode);
 pp.query("dxnuc", dxnuc);
 pp.query("dxnuc_max", dxnuc_max);
 pp.query("do_react", do_react);
