@@ -1,5 +1,9 @@
 # changes since last release
 
+  -- The parameter dtnuc_mode has been removed. This was initially used
+     for testing various forms of the burning timestep limiter before a
+     final form was settled on.
+
   -- Minor inconsistencies in how the external and diffusion source terms
      were constructed when simultaneously using reactions (#268, #269)
      have been fixed (#271).
